moving ajax call to model, replacing trim helper with new format helper, fixing spacing and style issues, changing router.

--- a/src/scripts/modules/role-acceptance/role-acceptance.less
+++ b/src/scripts/modules/role-acceptance/role-acceptance.less
@@ -18,11 +18,11 @@
   }
 
   .pending {
-    font-style: italic
+    font-style: italic;
   }
 
   .hasRejected {
-    text-decoration: line-through
+    text-decoration: line-through;
   }
 
 }
